recallable/tests/ui/derive_fail_enum_recall_skip.stderr
error: enum `Recall` derive only supports assignment-only variant fields
 --> tests/ui/derive_fail_enum_recall_skip.rs:6:9
  |
6 | /         #[recallable(skip)]
7 | |         sticky: u8,
  | |__________________^
