recallable/tests/ui/derive_fail_enum_recall_skip.rs
use recallable::{Recall, Recallable};

#[derive(Recallable, Recall)]
enum InvalidSkippedRecallEnum {
    Ready {
        #[recallable(skip)]
        sticky: u8,
        value: u8,
    },
}

fn main() {}
